<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
    android:id="@+id/create_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/create"
    android:layout_margin="4dp" />
    <Button
        android:id="@+id/hold_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hold"
        android:layout_margin="4dp" />
    <Button
        android:id="@+id/manage_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage"
        android:layout_margin="4dp" />
</LinearLayout>